tests/test_files_pa3/SemanticErrors/ContinueBreakNotLegalTest2.ic
class A
{
	static void main(string[] args) { }
	
	void whileInwhileintBolladContinue(int intBoll)
	{
		while (intBoll > 0)
		{
		if(true)
		{
			while (intBoll > 1)
			{
				{
					continue;
				}
				break;
			}			
			break;
		}
		else
		{
			return;
		}
			
		}
		continue;
	}
}